[project]
name = "language-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beir>=2.2.0",
    "datasets>=4.4.2",
    "evaluate>=0.4.6",
    "jupyter>=1.1.1",
    "kaggle>=1.8.3",
    "kagglehub>=0.4.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
